--- a/index.html
+++ b/index.html
@@ -1,75 +1,86 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/@codingnepal -->
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gemini Chatbot | CodingNepal</title>
-    <!-- Linking Google Fonts For Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@32,400,0,0" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <!-- App Header -->
-      <header class="app-header">
-        <h1 class="heading">Hello, there</h1>
-        <h4 class="sub-heading">How can I help you today?</h4>
-      </header>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8">
+  <title>قائمة الطعام</title>
+  <style>
+    body { font-family: 'Arial'; text-align: center; padding: 20px; background: #fff7f0; }
+    .filters { margin-bottom: 20px; }
+    input, select { padding: 10px; margin: 10px; width: 200px; }
+    .menu-item {
+      border: 1px solid #ccc;
+      padding: 15px;
+      margin: 10px auto;
+      width: 300px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #eee;
+    }
+  </style>
+</head>
+<body>
 
-      <!-- Suggestions List -->
-      <ul class="suggestions">
-        <li class="suggestions-item">
-          <p class="text">Design a home office setup for remote work under $500.</p>
-          <span class="icon material-symbols-rounded">draw</span>
-        </li>
-        <li class="suggestions-item">
-          <p class="text">How can I level up my web development expertise in 2025?</p>
-          <span class="icon material-symbols-rounded">lightbulb</span>
-        </li>
-        <li class="suggestions-item">
-          <p class="text">Suggest some useful tools for debugging JavaScript code.</p>
-          <span class="icon material-symbols-rounded">explore</span>
-        </li>
-        <li class="suggestions-item">
-          <p class="text">Create a React JS component for the simple todo list app.</p>
-          <span class="icon material-symbols-rounded">code_blocks</span>
-        </li>
-      </ul>
+  <h1>🍽️ قائمة الطعام</h1>
 
-      <!-- Chats -->
-      <div class="chats-container"></div>
+  <div class="filters">
+    <input type="text" id="searchInput" placeholder="ابحث عن صنف...">
+    <select id="priceFilter">
+      <option value="all">كل الأسعار</option>
+      <option value="cheap">رخيصة (≤ 30)</option>
+      <option value="medium">متوسطة (31 - 60)</option>
+      <option value="expensive">غالية (> 60)</option>
+    </select>
+  </div>
 
-      <!-- Prompt Input -->
-      <div class="prompt-container">
-        <div class="prompt-wrapper">
-          <form action="#" class="prompt-form">
-            <input type="text" placeholder="Ask Gemini" class="prompt-input" required />
-            <div class="prompt-actions">
-              <!-- File Upload Wrapper -->
-              <div class="file-upload-wrapper">
-                <img src="#" class="file-preview" />
-                <input id="file-input" type="file" accept="image/*, .pdf, .txt, .csv" hidden />
-                <button type="button" class="file-icon material-symbols-rounded">description</button>
-                <button id="cancel-file-btn" type="button" class="material-symbols-rounded">close</button>
-                <button id="add-file-btn" type="button" class="material-symbols-rounded">attach_file</button>
-              </div>
+  <div id="menuContainer">
+    <!-- الأصناف ستظهر هنا -->
+  </div>
 
-              <!-- Send Prompt and Stop Response Buttons -->
-              <button id="stop-response-btn" type="button" class="material-symbols-rounded">stop_circle</button>
-              <button id="send-prompt-btn" class="material-symbols-rounded">arrow_upward</button>
-            </div>
-          </form>
+  <script>
+    const menuItems = [
+      { name: "شاورما دجاج", price: 25 },
+      { name: "كفتة مشوية", price: 45 },
+      { name: "برجر لحم", price: 60 },
+      { name: "بيتزا مارجريتا", price: 75 },
+      { name: "عصير مانجو", price: 20 },
+      { name: "فتة شاورما", price: 65 },
+    ];
 
-          <!-- Theme and Delete Chats Buttons -->
-          <button id="theme-toggle-btn" class="material-symbols-rounded">light_mode</button>
-          <button id="delete-chats-btn" class="material-symbols-rounded">delete</button>
-        </div>
+    const container = document.getElementById('menuContainer');
+    const searchInput = document.getElementById('searchInput');
+    const priceFilter = document.getElementById('priceFilter');
 
-        <p class="disclaimer-text">Gemini can make mistakes, so double-check it.</p>
-      </div>
-    </div>
+    function displayMenu(items) {
+      container.innerHTML = '';
+      items.forEach(item => {
+        const div = document.createElement('div');
+        div.className = 'menu-item';
+        div.innerHTML = `<h3>${item.name}</h3><p>السعر: ${item.price} جنيه</p>`;
+        container.appendChild(div);
+      });
+    }
 
-    <script src="script.js"></script>
-  </body>
+    function filterMenu() {
+      const search = searchInput.value.toLowerCase();
+      const priceCategory = priceFilter.value;
+      let filtered = menuItems.filter(item => item.name.toLowerCase().includes(search));
+
+      filtered = filtered.filter(item => {
+        if (priceCategory === 'cheap') return item.price <= 30;
+        if (priceCategory === 'medium') return item.price > 30 && item.price <= 60;
+        if (priceCategory === 'expensive') return item.price > 60;
+        return true;
+      });
+
+      displayMenu(filtered);
+    }
+
+    searchInput.addEventListener('input', filterMenu);
+    priceFilter.addEventListener('change', filterMenu);
+
+    // عرض القائمة كاملة أول مرة
+    displayMenu(menuItems);
+  </script>
+
+</body>
 </html>
