--- a/index.html
+++ b/index.html
@@ -1,86 +1,95 @@
-<!DOCTYPE html>
-<html lang="ar">
+<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>قائمة الطعام</title>
+  <title>بطاقة طبق - روستو</title>
+  <!-- Google Font Tajawal for Arabic clean look -->
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Arial'; text-align: center; padding: 20px; background: #fff7f0; }
-    .filters { margin-bottom: 20px; }
-    input, select { padding: 10px; margin: 10px; width: 200px; }
-    .menu-item {
-      border: 1px solid #ccc;
-      padding: 15px;
-      margin: 10px auto;
-      width: 300px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #eee;
+    :root{
+      /* ألوان رستو الأساسية */
+      --rosto-red:#C1272D;
+      --rosto-brown:#A67C52;
+      --rosto-beige:#F5EFE0;
     }
+    body{
+      background:var(--rosto-beige);
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      min-height:100vh;
+      font-family:'Tajawal',sans-serif;
+    }/* الحاوية الرئيسية لبطاقة الطبق */
+.menu-card{
+  width:320px; /* مربع يشبه أبعاد صورة بروفايل واتس (يمكن تكبيرها) */
+  position:relative;
+  background:var(--rosto-brown);
+  padding:16px;
+  border-radius:20px;
+  box-shadow:0 6px 20px rgba(0,0,0,.2);
+}
+
+/* مربع اسم الطبق ملتصق بأعلى الصورة */
+.menu-card .dish-name{
+  position:absolute;
+  top:-20px;
+  left:50%;
+  transform:translateX(-50%);
+  background:var(--rosto-red);
+  color:#fff;
+  padding:6px 16px;
+  font-size:1.1rem;
+  font-weight:700;
+  border-radius:12px;
+  box-shadow:0 4px 10px rgba(0,0,0,.15);
+  white-space:nowrap;
+}
+
+/* إطار الصورة المربعة */
+.menu-card .image-wrapper{
+  width:100%;
+  padding-top:100%; /* يحافظ على نسبة 1:1 لتكون مربعة */
+  position:relative;
+  overflow:hidden;
+  border-radius:15px;
+}
+
+.menu-card .image-wrapper img{
+  position:absolute; top:0; left:0;
+  width:100%; height:100%;
+  object-fit:cover;
+}
+
+/* زخرفة الإطار الخارجي للصورة */
+.menu-card .image-wrapper::before{
+  content:"";
+  position:absolute; inset:0;
+  border:4px solid var(--rosto-red);
+  border-radius:15px;
+  pointer-events:none;
+  /* طبقتان لإضافة عمق */
+  box-shadow:inset 0 0 0 3px #fff, inset 0 0 0 6px var(--rosto-red);
+}
+
+/* زخرفة إضافية (مستطيل منقط داخلي) لإحساس كلاسيكي */
+.menu-card .image-wrapper::after{
+  content:"";
+  position:absolute; inset:12px;
+  border:2px dashed #ffffff80;
+  border-radius:10px;
+  pointer-events:none;
+}
+
   </style>
 </head>
 <body>
-
-  <h1>🍽️ قائمة الطعام</h1>
-
-  <div class="filters">
-    <input type="text" id="searchInput" placeholder="ابحث عن صنف...">
-    <select id="priceFilter">
-      <option value="all">كل الأسعار</option>
-      <option value="cheap">رخيصة (≤ 30)</option>
-      <option value="medium">متوسطة (31 - 60)</option>
-      <option value="expensive">غالية (> 60)</option>
-    </select>
+  <div class="menu-card">
+    <!-- اسم الطبق -->
+    <span class="dish-name">بوكس كفتة ميكس</span>
+    <!-- صورة الطبق -->
+    <div class="image-wrapper">
+      <!-- استبدل المسار dish.jpg بمسار صورتك -->
+      <img src="dish.jpg" alt="بوكس كفتة ميكس">
+    </div>
   </div>
-
-  <div id="menuContainer">
-    <!-- الأصناف ستظهر هنا -->
-  </div>
-
-  <script>
-    const menuItems = [
-      { name: "شاورما دجاج", price: 25 },
-      { name: "كفتة مشوية", price: 45 },
-      { name: "برجر لحم", price: 60 },
-      { name: "بيتزا مارجريتا", price: 75 },
-      { name: "عصير مانجو", price: 20 },
-      { name: "فتة شاورما", price: 65 },
-    ];
-
-    const container = document.getElementById('menuContainer');
-    const searchInput = document.getElementById('searchInput');
-    const priceFilter = document.getElementById('priceFilter');
-
-    function displayMenu(items) {
-      container.innerHTML = '';
-      items.forEach(item => {
-        const div = document.createElement('div');
-        div.className = 'menu-item';
-        div.innerHTML = `<h3>${item.name}</h3><p>السعر: ${item.price} جنيه</p>`;
-        container.appendChild(div);
-      });
-    }
-
-    function filterMenu() {
-      const search = searchInput.value.toLowerCase();
-      const priceCategory = priceFilter.value;
-      let filtered = menuItems.filter(item => item.name.toLowerCase().includes(search));
-
-      filtered = filtered.filter(item => {
-        if (priceCategory === 'cheap') return item.price <= 30;
-        if (priceCategory === 'medium') return item.price > 30 && item.price <= 60;
-        if (priceCategory === 'expensive') return item.price > 60;
-        return true;
-      });
-
-      displayMenu(filtered);
-    }
-
-    searchInput.addEventListener('input', filterMenu);
-    priceFilter.addEventListener('change', filterMenu);
-
-    // عرض القائمة كاملة أول مرة
-    displayMenu(menuItems);
-  </script>
-
 </body>
 </html>
