--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
         <option value="expensive">> 60 ج</option>
       </select>
     </section>
+<!-- زر واتساب -->
+<a href="https://wa.me/201234567890" class="whatsapp-button" target="_blank" aria-label="تواصل عبر واتساب">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
+</a>
 
+<!-- نص التواصل -->
+<div class="contact-note">للتواصل أو الاستفسار</div>
     <!-- القائمة الديناميكية -->
     <main id="menu" class="menu"></main>
 
